compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__not_byte_aligned.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn thing() {\n  4\n}\nfn go() {\n  <<256:4>>\n}\n"
snapshot_kind: text
---
error: Unsupported feature for compilation target
  ┌─ /src/nix/error.gleam:6:5
  │
6 │   <<256:4>>
  │     ^^^^^

Non byte aligned array is not supported for Nix compilation.
